2022-01-29  Jose E. Marchesi  <jemarch@gnu.org>

	* configure.ac (HAVE_HSERVER): Search for `tgetnum' first in
	libtermcap and then in libncurses.

2022-01-29  Jose E. Marchesi  <jemarch@gnu.org>

	* bootstrap.conf (gnulib_modules): Add `termios'.

2022-01-29  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd-set.c (pk_cmd_set_pager): New function.
	(set_pager_cmd): New variable.
	(pk_cmd_set_init): Add set_pager command.
	* poke/pk-repl.c (pk_repl): Use pager (conditionally) when
	executing commands in the repl.
	* poke/pk-settings.pk: Setting for `pager'.
	* poke/pk-term.c (screen_lines): New variable.
	(screen_cols): Likewise.
	(pager_active_p): Likewise.
	(nlines): Likewise.
	(pk_term_init): Initialize terminal dimensions.
	(pk_term_start_pager): New function.
	(pk_term_stop_pager): Likewise.
	(pk_puts_paged): Likewise.
	(pk_puts): Call pk_puts_paged when necessary.
	(pk_printf): Output via pk_puts.
	* poke/poke.c: New global poke_pager_p.

2022-01-29  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/poke.c (parse_args_2): Really restore proper behavior with
	-l and unhandled exceptions.

2022-01-29  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/poke.c (parse_args_2): Restore proper behavior with -l and
	unhandled exceptions.

2022-01-29  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd.h: Prototype for pk_cmd_completion_function.
	* poke/pk-cmd.c: Fix pk_cmd_find and export
	pk_cmd_completion_function.
	* poke/pk-repl.c: Adapt to new pk_cmd_find.
	* poke/pk-cmd-def.c: Fix auto-complete.
	* poke/pk-cmd-editor.c: Likewise.
	* poke/pk-cmd-help.c: Likewise.
	* poke/pk-cmd-info.c: Likewise.
	* poke/pk-cmd-ios.c: Likewise.
	* poke/pk-cmd-map.c: Likewise.
	* poke/pk-cmd-misc.c: Likewise.
	* poke/pk-cmd-set.c: Likewise.
	* poke/pk-cmd-vm.c: Likewise.
	* testsuite/poke.repl/repl.exp: Few more auto-completion tests.

2022-01-29  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.mi-json/mi-json.c (test_json_file): When libjson