@@ -46,6 +46,9 @@ var pk_doc_viewer = "info";
 /* Whether poke was built with support for libNBD.  */
 var pk_have_libnbd_p = 0;
 
+/* Whether to user the terminal pager.  */
+var pk_pager_p = 0;
+
 /* Default exception handler.  Do not do anything here that could
    raise an exception, because it will be silently ignored :P */
 
